--- a/webserver/web-config.json
+++ b/webserver/web-config.json
@@ -2,7 +2,7 @@
 	"port": 5000,
 	"public" : "../public",
 	"mysql": {
-		"host":"localhost",
+		"host":"192.168.1.102",
 		"user":"root",
 		"password":"santosh",
 		"database":"nodemonitor"
