--- a/webserver/web-config.json
+++ b/webserver/web-config.json
@@ -2,9 +2,10 @@
 	"port": 5000,
 	"public" : "../public",
 	"mysql": {
-		"host":"192.168.1.102",
-		"user":"root",
-		"password":"santosh",
-		"database":"nodemonitor"
+		"host":"trackdb.cf53zztlzwqg.us-east-1.rds.amazonaws.com",
+		"user":"trackuser",
+		"password":"trackmaster",
+		"database":"nodemonitor",
+		"port":"3360"
 	}
 }
